--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="teams">Teams</string>
     <string name="calls">Calls</string>
     <string name="calendar">Calendar</string>
+    <string name="type_message">Type a message</string>
 </resources>
