--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="calendar">Calendar</string>
     <string name="type_message">Type a message</string>
     <string name="unread_only">Unread Only</string>
+    <string name="search">SearchBar</string>
 </resources>
