--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="type_message">Type a message</string>
     <string name="unread_only">Unread Only</string>
     <string name="search">SearchBar</string>
+    <string name="more">More</string>
 </resources>
