(feat) Route to user chat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Teams</string>
+    <string name="app_name">TheCompose</string>
     <string name="user_name">Ismael Nunes</string>
     <string name="last_message_chat_1">Hola que tal?</string>
     <string name="chat">Chat</string>
